--- a/package.json
+++ b/package.json
@@ -44,10 +44,12 @@
     "livescript-loader": "^0.1.6",
     "react-dev-utils": "^3.0.0",
     "react-hot-loader": "^3.0.0-beta.6",
+    "react-svg-loader": "^1.1.1",
     "rimraf": "^2.6.0",
     "style-loader": "^0.18.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1",
+    "url-loader": "^0.5.8",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5"
   },
