--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Boilerplate for ReactJS project with hot code reloading",
   "scripts": {
     "start": "webpack-dev-server --progress",
+    "watchServer": "nodemon ./src/server/index.js",
     "lint": "eslint src",
     "prebuild": "rimraf dist",
     "build": "cross-env NODE_ENV=production webpack -p --config webpack.config.production.js",
@@ -42,6 +43,7 @@
     "css-loader": "^0.28.3",
     "livescript": "^1.5.0",
     "livescript-loader": "^0.1.6",
+    "nodemon": "^1.11.0",
     "react-dev-utils": "^3.0.0",
     "react-hot-loader": "^3.0.0-beta.6",
     "react-svg-loader": "^1.1.1",
@@ -55,9 +57,12 @@
   },
   "dependencies": {
     "babel-eslint": "^7.1.1",
+    "express": "^4.15.3",    
     "eslint": "^3.14.1",
     "eslint-plugin-react": "^6.9.0",
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "socket.io": "^2.0.3",
+    "socket.io-client": "^2.0.3"
   }
 }
